# the_modern_cpp_challenge_solutions

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  OpenCppCoverage.config  README.md
.github/workflows/: build_cmake.yml
chapter01/: CMakeLists.txt
chapter01/problem_01/: CMakeLists.txt  CmakeLists.TXT  main.cpp
chapter01/problem_01/include/: problem_01.h
chapter01/problem_01/src/: main.cpp  problem_01.cpp
chapter01/problem_01/tests/: tests.cpp
chapter01/problem_02/: CMakeLists.txt  main.cpp
chapter01/problem_03/: CMakeLists.txt  main.cpp
chapter01/problem_04/: CMakeLists.txt  main.cpp
chapter01/problem_05/: CMakeLists.txt  main.cpp
chapter01/problem_06/: CMakeLists.txt  main.cpp
chapter01/problem_07/: CMakeLists.txt  main.cpp
chapter01/problem_08/: CMakeLists.txt  main.cpp
chapter01/problem_09/: CMakeLists.txt  main.cpp  tests_main.cpp
chapter01/problem_10/: CMakeLists.txt  main.cpp
chapter01/problem_11/: CMakeLists.txt  main.cpp
chapter01/problem_12/: CMakeLists.txt  main.cpp
chapter01/problem_13/: CMakeLists.txt  main.cpp
chapter01/problem_14/: CMakeLists.txt  main.cpp
chapter02/: CMakeLists.txt
chapter02/problem_15/: CMakeLists.txt  Ipv4.hpp  main.cpp
chapter02/problem_16/: CMakeLists.txt  main.cpp
chapter02/problem_17/: Array2D.hpp  CMakeLists.txt  tests.cpp
chapter02/problem_18/: CMakeLists.txt  main.cpp
chapter02/problem_19/: CMakeLists.txt  main.cpp
chapter02/problem_20/: CMakeLists.txt  main.cpp
chapter02/problem_22/: CMakeLists.txt  main.cpp
chapter03/: CMakeLists.txt
chapter03/problem_23/: CMakeLists.txt  main.cpp
chapter03/problem_24/: CMakeLists.txt  main.cpp
chapter03/problem_25/: CMakeLists.txt  main.cpp
chapter03/problem_26/: CMakeLists.txt  main.cpp
chapter03/problem_27/: CMakeLists.txt  main.cpp
chapter03/problem_28/: CMakeLists.txt  main.cpp
chapter03/problem_29/: CMakeLists.txt  main.cpp
chapter03/problem_30/: CMakeLists.txt  main.cpp
chapter03/problem_31/: CMakeLists.txt  main.cpp
chapter04/: CMakeLists.txt
chapter04/problem_32/: CMakeLists.txt  main.cpp
chapter04/problem_33/: CMakeLists.txt  main.cpp
chapter04/problem_34/: CMakeLists.txt  file.txt  main.cpp
chapter04/problem_35/: CMakeLists.txt  main.cpp
chapter04/problem_36/: CMakeLists.txt  main.cpp
chapter04/problem_37/: CMakeLists.txt  main.cpp
chapter05/: CMakeLists.txt
chapter05/problem_39/: CMakeLists.txt  main.cpp
chapter05/problem_40/: CMakeLists.txt  main.cpp
chapter05/problem_41/: CMakeLists.txt  main.cpp
chapter05/problem_42/: CMakeLists.txt  main.cpp
chapter05/problem_43/: CMakeLists.txt  main.cpp  tests_main.cpp
chapter05/problem_44/: CMakeLists.txt  main.cpp
chapter09/: CMakeLists.txt
chapter09/problem_73/: CMakeLists.txt
chapter09/problem_73/data/: movies.xml
chapter09/problem_73/include/: pugixml.hpp
chapter09/problem_73/src/: main.cpp  pugixml.cpp
chapter09/problem_74/: CMakeLists.txt
chapter09/problem_74/data/: movies.xml
chapter09/problem_74/include/: pugixml.hpp
chapter09/problem_74/src/: main.cpp
chapter09/problem_75/: CMakeLists.txt  main.cpp
chapter09/problem_76/: CMakeLists.txt
chapter09/problem_76/data/: movies.json
chapter09/problem_76/src/: main.cpp
chapter09/problem_77/: CMakeLists.txt  main.cpp
chapter10/: CMakeLists.txt
chapter10/problem_79/: CMakeLists.txt
chapter10/problem_79/include/: zip_file.hpp
chapter10/problem_79/src/: main.cpp
chapter10/problem_80/: CMakeLists.txt
chapter10/problem_80/src/: main.cpp
chapter10/problem_82/: CMakeLists.txt
chapter10/problem_82/src/: main.cpp
