cmake_minimum_required(VERSION 3.10)
project(modern_cpp_challenge_book)

add_subdirectory(problem_01)
add_subdirectory(problem_02)
add_subdirectory(problem_03)
add_subdirectory(problem_04)
add_subdirectory(problem_05)
add_subdirectory(problem_06)
add_subdirectory(problem_07)
add_subdirectory(problem_08)
add_subdirectory(problem_09)
add_subdirectory(problem_10)
add_subdirectory(problem_11)
add_subdirectory(problem_12)
add_subdirectory(problem_13)
add_subdirectory(problem_14)