cmake_minimum_required(VERSION 3.7.0)
project(modern_cpp_challenge_book)

add_subdirectory(problem_23)
add_subdirectory(problem_24)
add_subdirectory(problem_25)
add_subdirectory(problem_26)
add_subdirectory(problem_27)
add_subdirectory(problem_28)
add_subdirectory(problem_29)
add_subdirectory(problem_30)